# qwantize

./: README.md  pyproject.toml
bench/: full_bench.py  mxfp4_scale_distance.py  nvfp4_scale_distance.py
docs/: make.bat  requirements.txt
docs/source/: conf.py  custom_codebook.md  hessian_scale_search.md  index.md  optimal_scale_search.md  results.md  scale_distance.md  triton_kernels.md
docs/source/_static/: custom.css
docs/source/api/: int8.md  metrics.md  mxfp4.md  nvfp4.md
experiments/: custom_codebook.py  eval_ppl.py  gptq_invert.py  hessian_layer_sweep.py  prune_llm.py  prune_sparsegpt.py  quant_bench.py  quant_bench_gptq.py  quant_eval.py  quant_exotic_scales.py  quant_gptq_exotic_scales.py  quant_gptq_int4.py  quant_gptq_row_ordered.py  quant_gptq_strided.py  quant_gptq_strided_nvint4.py
quantkit/mxfp4/: kernels.py  reference.py
quantkit/nvfp4/: kernels.py  reference.py
qwantize/: __init__.py  exotic_scales.py  fp4.py  fp8.py  metrics.py
qwantize/int8/: __init__.py  reference.py
qwantize/mxfp4/: __init__.py  kernels.py  reference.py
qwantize/nvfp4/: __init__.py  kernels.py  reference.py
qwantize/nvint4/: __init__.py  reference.py
