[tool.poetry]
name = "qwantize"
version = "0.1.1"
description = "Optimal block-scaled FP4 quants (NVFP4, MXFP4)"
authors = ["Ayoub G. <research@ayghri.me>"]
packages = [{include = "qwantize"}]
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10"
torch = ">=2.0"
triton = ">=3.0"
