[tool.poetry]
name = "qwantize"
version = "0.1.2"
description = "Optimal block-scaled FP4 quants (NVFP4, MXFP4)"
authors = ["Ayoub G. <research@ayghri.me>"]
packages = [{include = "qwantize"}]
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.11"
torch = ">=2.0"
triton = ">=3.0"
numpy = "^2.4.4"
